--- a/GameData/Knes/Parts/Core/Parachute/_Knes_Paraglider_Steerable_srf.cfg
+++ b/GameData/Knes/Parts/Core/Parachute/_Knes_Paraglider_Steerable_srf.cfg
@@ -31,7 +31,7 @@ PART:NEEDS[RetractableLiftingSurface]
 	subcategory  = 0
 	title        = Steerable Paraglider "Arcas"
 	manufacturer = Knes
-	description  = The "Icarus" Parachute might be considered by some to be little more than a random stitching together of the surplus parts it is, in fact, made from. A generally better alternative to being in freefall.
+	description  = The "Icarus" Parachute might be considered by some to be little more than a random stitching together of the surplus parts it is, in fact, made from. A generally better alternative to being in freefall. Please place on the Center of mass of your vehicle.
 
 	tags = Knes chute parachute srf stack paraglider ixv StarRider wing
 
