New StarRider IVA + set to 4 crew

--- a/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
@@ -57,12 +57,12 @@ PART
 	thermalMassModifier = 1.0
 
 // --- internal setup ---
-	CrewCapacity = 3
+	CrewCapacity = 4
 
 	INTERNAL
 	{
-		name = K-IXV_IVA
-		offset = 0, -0.2, 0.14
+		name = Knes_Pod_StarRider_IVA
+		offset = 0, 0.1, 0.7
 	}
 	
 	MODULE
