--- a/GameData/Knes/Parts/Spacecraft/_Knes_MonoProp_Engine_srf.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_MonoProp_Engine_srf.cfg
@@ -57,18 +57,18 @@ PART
 				pitch = 1.0 1.0
 				loop = true
 			}
+
 			MODEL_MULTI_PARTICLE
 			{
-				modelName = Squad/FX/Monoprop_big
+				modelName = Knes/Resources/Plumes/H3/FX_H3_Engine
 				transformName = FXTransform
 				emission = 0.0 0.0
-				emission = 0.4 0.5
-				emission = 1.0 0.7
+				emission = 0.2 0.2
+				emission = 1.0 0.4
 				speed = 0.0 0.8
 				speed = 1.0 1.0
-				//localOffset = 0, 0, 1
 				localPosition = 0, 0, 0.12
-			}
+			}			
 		}	
 		engage
 		{
