--- a/GameData/Knes/Parts/Spacecraft/_Knes_Service_Module_Viking_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Service_Module_Viking_09375.cfg
@@ -139,21 +139,22 @@ PART
 				channel = Ship
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 1.0 0.5
-				pitch = 0.0 0.5
-				pitch = 1.0 1.0
+				volume = 1.0 0.3
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
 				loop = true
 			}
+			
 			MODEL_MULTI_PARTICLE
 			{
-				modelName = Squad/FX/Monoprop_big
-				transformName = FXTransform
+				modelName = Knes/Resources/Plumes/H3/FX_H3_Engine
+				transformName = thrustTransform
 				emission = 0.0 0.0
-				emission = 0.4 0.5
-				emission = 1.0 0.7
+				emission = 0.2 0.2
+				emission = 1.0 0.4
 				speed = 0.0 0.8
 				speed = 1.0 1.0
-				localPosition = 0, 0, 0
+				//localOffset = 0, 0, 1
 			}
 		}			
 	}
