--- a/GameData/Knes/Parts/Spacecraft/_Knes_Utility_Adapter_09375_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Utility_Adapter_09375_0625.cfg
@@ -67,7 +67,7 @@ PART
         minThrust = 0
         maxThrust = 28
 		heatProduction = 5
-		fxOffset = 0, 0, 0.2
+		fxOffset = 0, 0, 0.8
 		PROPELLANT
 		{
 			name = MonoPropellant
@@ -82,6 +82,7 @@ PART
 		}
         
     }
+	
     MODULE
     {
         name = ModuleSurfaceFX
@@ -91,6 +92,7 @@ PART
         falloff = 2
         thrustTransformName = thrustTransform
     }
+	
 	EFFECTS
 	{	
 		running
@@ -100,24 +102,26 @@ PART
 				channel = Ship
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 1.0 0.5
-				pitch = 0.0 0.5
-				pitch = 1.0 1.0
+				volume = 1.0 0.3
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
 				loop = true
 			}
 			MODEL_MULTI_PARTICLE
 			{
-				modelName = Squad/FX/Monoprop_big
-				transformName = thrustTransform
+				modelName = Knes/Resources/Plumes/H3/FX_H3_Engine
+				transformName = Thrust
 				emission = 0.0 0.0
-				emission = 0.4 0.2
-				emission = 1.0 0.3
+				emission = 0.2 0.2
+				emission = 1.0 0.4
 				speed = 0.0 0.8
 				speed = 1.0 1.0
-				localPosition = 0, 0, 0
-			}
+				//localOffset = 0, 0, 1
+			}		
 		}			
 	}	
+	
+	
     MODULE
     {
         name = ModuleColorChanger
