Texture update lifting bodies

--- a/GameData/Knes/Parts/Spacecraft/_Knes_Utility_Adapter_09375_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Utility_Adapter_09375_0625.cfg
@@ -111,6 +111,7 @@ PART
 			{
 				modelName = Knes/Resources/Plumes/H3/FX_H3_Engine
 				transformName = Thrust
+				//transformName = PlumeTransform
 				emission = 0.0 0.0
 				emission = 0.2 0.2
 				emission = 1.0 0.4
