--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_Engine_Zebulon.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_Engine_Zebulon.cfg
@@ -148,7 +148,7 @@ PART
 	MODULE
 	{
 		name = ModuleJettison
-		jettisonName = Fairing_125,Fairing_1875
+		jettisonName = Fake_Fairing,Fairing_1875
 		bottomNodeName = bottom
 		isFairing = True
 		jettisonedObjectMass = 0.5
@@ -219,4 +219,49 @@ PART
             key = 1 1
         }
     }	
+	MODULE
+	{
+		name = ModulePartVariants
+		baseVariant = Shroud
+		VARIANT
+		{
+			name = Shroud
+			displayName = #autoLOC_8007114
+			primaryColor = #ffffff
+			secondaryColor = #999999
+			sizeGroup = GroupB
+			GAMEOBJECTS
+			{
+				1875_mount = true
+				L33_1875_EngineMount = true
+				Collider1875 = true
+				Bare_mount = false
+				Fairing_1875 = true
+				FakeFairing = false				
+				L33_Bare_EngineMount = false
+			}
+		}	
+		VARIANT
+		{
+			name = Bare
+			displayName =  #autoLOC_8007115
+			primaryColor = #d96200
+			secondaryColor = #999999
+			sizeGroup = GroupA
+			GAMEOBJECTS
+			{
+				1875_mount = false
+				L33_1875_EngineMount = false
+				Collider1875 = false
+				Bare_mount = true
+				Fairing_1875 = false
+				FakeFairing = true				
+				L33_Bare_EngineMount = true
+			}
+			NODES
+			{
+				node_stack_top = 0.0, -0.04366, 0.0, 0.0, -1.0, 0.0, 1
+			}			
+		}		
+	}	
 }
