--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM60_Engine.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM60_Engine.cfg
@@ -164,7 +164,7 @@ PART
 	MODULE
 	{
 		name = ModuleJettison
-		jettisonName = Fairing
+		jettisonName = Fairing,Fake_Fairing
 		bottomNodeName = bottom
 		isFairing = True
 		jettisonedObjectMass = 0.5
@@ -235,4 +235,49 @@ PART
             key = 1 1
         }
     }	
+	MODULE
+	{
+		name = ModulePartVariants
+		baseVariant = Shroud
+		VARIANT
+		{
+			name = Shroud
+			displayName = #autoLOC_8007114
+			primaryColor = #ffffff
+			secondaryColor = #999999
+			sizeGroup = GroupB
+			GAMEOBJECTS
+			{
+				L33_1875_EngineMount = true
+				1875_mount = true
+				Collider1875 = true
+				Bare_mount = false
+				Fairing = true
+				FakeFairing = false						
+				L33_Bare_EngineMount = false
+			}
+		}	
+		VARIANT
+		{
+			name = Bare
+			displayName =  #autoLOC_8007115
+			primaryColor = #d96200
+			secondaryColor = #999999
+			sizeGroup = GroupA
+			GAMEOBJECTS
+			{
+				L33_1875_EngineMount = false
+				1875_mount = false
+				Collider1875 = false
+				Bare_mount = true
+				Fairing = false
+				FakeFairing = true						
+				L33_Bare_EngineMount = true
+			}
+			NODES
+			{
+				node_stack_top = 0.0, 0.06403, 0.0, 0.0, -1.0, 0.0, 1
+			}			
+		}		
+	}	
 }
