--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_Engine_Zebulon.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_Engine_Zebulon.cfg
@@ -43,7 +43,7 @@ PART
 	breakingTorque = 180
 	maxTemp = 2000 // = 3600
 	bulkheadProfiles = size1p5
-	tags = propuls rocket Knes sustain Zebulon
+	tags = propuls rocket Knes sustain Zebulon L3S Ariane
 
 	MODULE
 	{
