--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_Avionics_250.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_Avionics_250.cfg
@@ -41,7 +41,7 @@ PART
 	explosionPotential = 0.5
 	breakingForce = 200
 	breakingTorque = 200
-	tags = 2.5m probe control instrument unit knes Minus
+	tags = 2.5m probe control instrument unit knes Minus L3S Ariane
 	bulkheadProfiles = size2
 	vesselType = Probe
 
