--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_Cryo_LH2_125.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_Cryo_LH2_125.cfg
@@ -34,7 +34,7 @@ PART
 	manufacturer = Knes
 	description = Where we're going, we don't need paint. This fuel tank lacks decoration, but it's certain to please utilitarians.
 
-	tags = 1.25 Knes
+	tags = 1.25 Knes L3S Ariane
 
 	mass = 0.3125
 
