--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_H8_Separatron.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_H8_Separatron.cfg
@@ -28,7 +28,7 @@ PART
 	manufacturer = Knes
 	description = A small canister filled with what appears to be solid rocket fuel.
 	
-	tags = Diamant Knes booster srf Diomede
+	tags = Diamant Knes booster srf Diomede L3S Ariane
 	
 	mass = 0.02
 	heatConductivity = 0.04 // 1/3 default
