--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM4_Engine_125.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM4_Engine_125.cfg
@@ -32,7 +32,7 @@ PART
 	title = HM4 "Themis" Cryogenic Engine
 	manufacturer = Knes
 	description = This small 1.25 Cryogenic engine provides a nice kick to lift small payloads to considerable heights.
-	tags = Diamant Knes 0.625 engine Diomede
+	tags = Diamant Knes 0.625 engine Diomede L3S Ariane
 
     mass = 0.8
 
