--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM60_Engine.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM60_Engine.cfg
@@ -42,7 +42,7 @@ PART
 	breakingTorque = 180
 	maxTemp = 3200
 	bulkheadProfiles = size2
-	tags = propuls rocket Knes sustain themis HM60
+	tags = propuls rocket Knes sustain themis HM60 L3S Ariane
 
 	MODULE
 	{
