--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_AR4_Avionics.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_AR4_Avionics.cfg
@@ -41,7 +41,7 @@ PART
 	explosionPotential = 0.5
 	breakingForce = 100
 	breakingTorque = 100
-	tags = 1.875m probe control instrument unit knes Minus
+	tags = 1.875m probe control instrument unit knes Minus L3S Ariane
 	bulkheadProfiles = size1p5
 	vesselType = Probe
 
