--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_Fin.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_Fin.cfg
@@ -29,7 +29,7 @@ PART
 	title = KEREB-D "Beauty" Fin
 	manufacturer = Knes
 	description = Small Fin for the Ariane Rocket. The fin is a corrugated fin obtained by molding an Kl-Kn alloy material.
-	tags = Ariane Knes fin aileron
+	tags = Ariane Knes fin aileron L3S
 	
 	mass = 0.02
 	
