--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_H8.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_H8.cfg
@@ -40,7 +40,7 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000 // = 2900
 	bulkheadProfiles = size1p5
-	tags = knes fuel fueltank ?lfo propellant rocket
+	tags = knes fuel fueltank ?lfo propellant rocket  L3S Ariane
 
 	RESOURCE
 	{
