--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L33_Engine.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L33_Engine.cfg
@@ -42,7 +42,7 @@ PART
 	breakingTorque = 180
 	maxTemp = 2000 // = 3600
 	bulkheadProfiles = size1p5
-	tags = propuls rocket Knes sustain Zebulon
+	tags = propuls rocket Knes sustain Zebulon L3S Ariane
 
 	MODULE
 	{
