--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_PAP.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_PAP.cfg
@@ -28,7 +28,7 @@ PART
 	manufacturer = Knes
 	description = A small canister filled with what appears to be solid rocket fuel.
 	
-	tags = Ariane PAP Knes booster srf
+	tags = Ariane PAP Knes booster srf L3S
 	
 	mass = 0.02
 	heatConductivity = 0.04 // 1/3 default
