--- a/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Engine_Vulcain.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Engine_Vulcain.cfg
@@ -243,5 +243,48 @@ PART
             key = 0 0
             key = 1 1
         }
-    }		
+    }
+	MODULE
+	{
+		name = ModulePartVariants
+		baseVariant = Shroud
+		VARIANT
+		{
+			name = Shroud
+			displayName = #autoLOC_8007114
+			primaryColor = #ffffff
+			secondaryColor = #999999
+			sizeGroup = GroupB
+			GAMEOBJECTS
+			{
+				Bare_Mount = false
+				Collider1 = true
+				Collider2 = true
+				Collider_bare = false
+				Engine = true
+				obj_fairing = true						
+			}
+		}	
+		VARIANT
+		{
+			name = Bare
+			displayName =  #autoLOC_8007115
+			primaryColor = #d96200
+			secondaryColor = #999999
+			sizeGroup = GroupA
+			GAMEOBJECTS
+			{
+				Bare_Mount = true
+				Collider1 = false
+				Collider2 = false
+				Collider_bare = true
+				Engine = false
+				obj_fairing = false						
+			}
+			NODES
+			{
+				node_stack_top = 0.0, -1.08474, 0.0, 0.0, -1.0, 0.0, 1
+			}			
+		}		
+	}	
 }
