--- a/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Booster_P80.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Booster_P80.cfg
@@ -17,8 +17,8 @@ PART
 	rescaleFactor = 1
 	scale = 1
 	
-	node_stack_bottom = 0.0, -9.1, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_top = 0.0, 3.44, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -4.16624, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_top = 0.0, 3.36185, 0.0, 0.0, 1.0, 0.0, 1
 	node_attach = 0.0, 0.0, -0.9375, 0.0, 0.0, 1.0
 
 	fx_exhaustFlame_yellow = 0.0, -10.0, 0.0, 0.0, 1.0, 0.0, running
@@ -31,16 +31,16 @@ PART
 	sound_explosion_low = flameout
 	
 	TechRequired = advRocketry
-	entryCost = 2400
-	cost = 5000
+	entryCost = 1400
+	cost = 1800
 	category = Engine
 	subcategory = 0
 	
 	title = P80 Solid Fuel Booster
-	description =  Booster with Gimbal
+	description =  A small Booster with Gimbal
 	manufacturer = Knes
 	attachRules = 1,1,1,1,0
-	mass = 2.5
+	mass = 2.2
 	heatConductivity = 0.06 // 1/2 default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.5 // yes, it's white. But let's claim it's an emissive white...
@@ -62,8 +62,8 @@ PART
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust = 1300
-		heatProduction = 200
+		maxThrust = 800
+		heatProduction = 150
 		useEngineResponseTime = True
 		engineAccelerationSpeed = 10.0
 		allowShutdown = False
@@ -92,8 +92,8 @@ PART
 RESOURCE
 {
     name = SolidFuel
-    amount = 3000
-    maxAmount = 3000
+    amount = 1600
+    maxAmount = 1600
 }
 
 	MODULE
@@ -150,5 +150,16 @@ RESOURCE
             key = 0 0
             key = 1 1
         }
-    }		
+    }	
+	MODULE
+	{
+		name = ModuleJettison
+		jettisonName = Fairing
+		bottomNodeName = bottom
+		isFairing = True
+		jettisonedObjectMass = 0.1
+		jettisonForce = 0
+		jettisonDirection = 0 0 1
+	}	
+		
 }
