--- a/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Booster_P80.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Booster_P80.cfg
@@ -40,7 +40,7 @@ PART
 	description =  A small Booster with Gimbal
 	manufacturer = Knes
 	attachRules = 1,1,1,1,0
-	mass = 2.2
+	mass = 1.8
 	heatConductivity = 0.06 // 1/2 default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.5 // yes, it's white. But let's claim it's an emissive white...
@@ -52,7 +52,7 @@ PART
 	maxTemp = 2000 // = 3600
 	stagingIcon = SOLID_BOOSTER
 	bulkheadProfiles = size1p5
-	tags = knes P80 moar motor rocket srb
+	tags = knes P80 moar motor rocket srb vega ariane
 	
 	MODULE
 	{
