Fix HM7 fairing

--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_Engine_Zebulon.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_Engine_Zebulon.cfg
@@ -148,7 +148,7 @@ PART
 	MODULE
 	{
 		name = ModuleJettison
-		jettisonName = Fake_Fairing,Fairing_1875
+		jettisonName = Fairing_1875
 		bottomNodeName = bottom
 		isFairing = True
 		jettisonedObjectMass = 0.5
@@ -235,9 +235,7 @@ PART
 				1875_mount = true
 				L33_1875_EngineMount = true
 				Collider1875 = true
-				Bare_mount = false
-				Fairing_1875 = true
-				FakeFairing = false				
+				Bare_mount = false			
 				L33_Bare_EngineMount = false
 			}
 		}	
@@ -253,9 +251,7 @@ PART
 				1875_mount = false
 				L33_1875_EngineMount = false
 				Collider1875 = false
-				Bare_mount = true
-				Fairing_1875 = false
-				FakeFairing = true				
+				Bare_mount = true			
 				L33_Bare_EngineMount = true
 			}
 			NODES
