New Payload Adapter

--- a/GameData/Knes/Parts/Core/Adapters/_Knes_Structural_Kylda_0625.cfg
+++ b/GameData/Knes/Parts/Core/Adapters/_Knes_Structural_Kylda_0625.cfg
@@ -1,6 +1,6 @@
 PART
 {
-	name = Knes_Structural_Kylda
+	name = Knes_Structural_Kylda_0625
 	module = Part
 	author = Well
 	
@@ -10,21 +10,21 @@ PART
 	}	
 	
 	scale = 1	
-	rescaleFactor = 1
+	rescaleFactor = 0.25
 	
-	node_stack_top = 0.0, 0.42473, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.35, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_top = 0.0, 0.42473, 0.0, 0.0, 1.0, 0.0, 0
+	node_stack_bottom = 0.0, -0.35, 0.0, 0.0, -1.0, 0.0, 0
 	
-	TechRequired = miniaturization
-	entryCost = 1400
-	cost = 150
+	TechRequired = start
+	entryCost = 400
+	cost = 40
 	category = Structural
 	subcategory = 0
-	title = Payload Adapter K-250 "Kylda"
+	title = Payload Adapter K-0625 "Kylda"
 	manufacturer = Knes
 	description = A small parts adapter for space probes and payload.
 	attachRules = 1,0,1,1,0
-	mass = 0.25
+	mass = 0.05
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -34,6 +34,6 @@ PART
 	breakingForce = 50
 	breakingTorque = 50
 	fuelCrossFeed = True
-	bulkheadProfiles = size1, size2
+	bulkheadProfiles = size0
 	tags = knes )cap cone nose Ariane adapter
 }
