--- a/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Engine_Vulcain.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Engine_Vulcain.cfg
@@ -18,8 +18,8 @@ PART
 	
 	
 	node_stack_top = 0.0, 1.718, 0.0, 0.0, 1.0, 0.0, 3
-	node_stack_bottom = 0.0, -3.202, 0.0, 0.0, -1.0, 0.0, 3
-	
+	node_stack_bottom = 0.0, -3.202, 0.0, 0.0, -1.0, 0.0, 3	
+				
 	TechRequired = heavierRocketry
 	entryCost = 18000
 	cost = 5200
@@ -261,9 +261,8 @@ PART
 				Collider1 = true
 				Collider2 = true
 				Collider_bare = false
-				Engine = true
-				obj_fairing = true						
-			}
+				Engine = true					
+			}			
 		}	
 		VARIANT
 		{
@@ -272,14 +271,14 @@ PART
 			primaryColor = #d96200
 			secondaryColor = #999999
 			sizeGroup = GroupA
+			//disabledEvents = ModuleJettison
 			GAMEOBJECTS
 			{
 				Bare_Mount = true
 				Collider1 = false
 				Collider2 = false
 				Collider_bare = true
-				Engine = false
-				obj_fairing = false						
+				Engine = false					
 			}
 			NODES
 			{
