--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM60_Engine.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM60_Engine.cfg
@@ -164,7 +164,7 @@ PART
 	MODULE
 	{
 		name = ModuleJettison
-		jettisonName = Fairing,Fake_Fairing
+		jettisonName = Fairing
 		bottomNodeName = bottom
 		isFairing = True
 		jettisonedObjectMass = 0.5
@@ -251,9 +251,7 @@ PART
 				L33_1875_EngineMount = true
 				1875_mount = true
 				Collider1875 = true
-				Bare_mount = false
-				Fairing = true
-				FakeFairing = false						
+				Bare_mount = false					
 				L33_Bare_EngineMount = false
 			}
 		}	
@@ -269,9 +267,7 @@ PART
 				L33_1875_EngineMount = false
 				1875_mount = false
 				Collider1875 = false
-				Bare_mount = true
-				Fairing = false
-				FakeFairing = true						
+				Bare_mount = true					
 				L33_Bare_EngineMount = true
 			}
 			NODES
