New H3 Bare Variant

--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_H3_Engine_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_H3_Engine_0625.cfg
@@ -198,5 +198,56 @@ PART
             key = 1 1
         }
     }	
-	
+	MODULE
+	{
+		name = ModulePartVariants
+		baseVariant = Shroud
+		VARIANT
+		{
+			name = Shroud
+			displayName = #autoLOC_8007114
+			primaryColor = #ffffff
+			secondaryColor = #999999
+			sizeGroup = GroupB
+			GAMEOBJECTS
+			{
+				BareMount = false
+				Collider = true
+				Collider2 = true
+				ColliderBare = false			
+				EndCap = true
+				Fuel_line_000 = true
+				Shroud = true
+				support = true
+				support_tuyere_001 = true			
+				tuyere = true				
+			}			
+		
+		}	
+		VARIANT
+		{
+			name = Bare
+			displayName =  #autoLOC_8007115
+			primaryColor = #d96200
+			secondaryColor = #999999
+			sizeGroup = GroupA
+			GAMEOBJECTS
+			{
+				BareMount = true
+				Collider = false
+				Collider2 = false
+				ColliderBare = true			
+				EndCap = false
+				Fuel_line_000 = true
+				Shroud = false
+				support = false
+				support_tuyere_001 = true			
+				tuyere = true				
+			}
+			NODES
+			{
+				node_stack_top = 0.0, 0.03368, 0.0, 0.0, -1.0, 0.0, 0
+			}			
+		}		
+	}	
 }
