--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_H2_Engine_09375.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_H2_Engine_09375.cfg
@@ -198,5 +198,56 @@ PART
             key = 1 1
         }
     }	
-	
+	MODULE
+	{
+		name = ModulePartVariants
+		baseVariant = Shroud
+		VARIANT
+		{
+			name = Shroud
+			displayName = #autoLOC_8007114
+			primaryColor = #ffffff
+			secondaryColor = #999999
+			sizeGroup = GroupB
+			GAMEOBJECTS
+			{
+				BareCollider = false
+				Baresupport = false
+				Collider = true
+				Collider2 = true			
+				H2_001 = true
+				H3_001 = true
+				P10 = true
+				support = true
+				support_001 = true			
+				support_tuyere_000 = true			
+			}			
+		
+		}	
+		VARIANT
+		{
+			name = Bare
+			displayName =  #autoLOC_8007115
+			primaryColor = #d96200
+			secondaryColor = #999999
+			sizeGroup = GroupA
+			GAMEOBJECTS
+			{
+				BareCollider = true
+				Baresupport = true
+				Collider = false
+				Collider2 = false			
+				H2_001 = false
+				H3_001 = false
+				P10 = false
+				support = false
+				support_001 = false			
+				support_tuyere_000 = true				
+			}
+			NODES
+			{
+				node_stack_top = 0.0, -0.01105, 0.0, 0.0, -1.0, 0.0, 0
+			}			
+		}		
+	}	
 }
