--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes.cfg
@@ -311,4 +311,44 @@
 		amount = 100
 		maxAmount = 100
 	}
+	MODULE
+	{
+		name = ModulePartVariants
+		baseVariant = MK1
+		VARIANT
+		{
+			name = MK1
+			displayName = #autoLOC_8007114
+			primaryColor = #ffffff
+			secondaryColor = #999999
+			//sizeGroup = GroupB
+			GAMEOBJECTS
+			{
+				Hermes_body = true
+				Hermes_bodyMK2 = false
+				cargo_door_left = true
+				cargo_door_right = true		
+				cargo_door_left_MK2 = false
+				cargo_door_right_MK2 = false				
+			}			
+		
+		}	
+		VARIANT
+		{
+			name = MK2
+			displayName =  #autoLOC_8007115
+			primaryColor = #d96200
+			secondaryColor = #999999
+			//sizeGroup = GroupA
+			GAMEOBJECTS
+			{
+				Hermes_body = false
+				Hermes_bodyMK2 = true
+				cargo_door_left = false
+				cargo_door_right = false		
+				cargo_door_left_MK2 = true
+				cargo_door_right_MK2 = true				
+			}			
+		}		
+	}	
 }
