--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes.cfg
@@ -12,28 +12,26 @@
 	scale = 1
 	rescaleFactor = 1
 	
-	//node_stack_bottom = 0.0467, 1.505, 0.8303, 0, 0, 1, 1
-	node_stack_engine = 0, -3.481, -0.11, 0.0, -1.0, 0.0, 0
-	node_stack_AileronR = -1.7195, -3.01, 0.55, 0.0, -1.0, 0.0, 0
-	node_stack_AileronL = 1.714, -3.01, 0.55, 0.0, -1.0, 0.0, 0
-	node_stack_AileronC = 0.0, -3.34, 0.60, 0.0, -1.0, 0.0, 0
-	node_stack_rudderL = -2.86, -2.77, -0.04, 0.0, -1.0, 0.0, 0
-	node_stack_rudderR = 2.82, -2.77, -0.04, 0.0, -1.0, 0.0, 0
-	
+	node_stack_engine = 0, -3.47795, -0.16938, 0.0, -1.0, 0.0, 0
+	node_stack_AileronR = -1.7195, -3.01, 0.545, 0.0, -1.0, 0.0, 0
+	node_stack_AileronL = 1.714, -3.01, 0.545, 0.0, -1.0, 0.0, 0
+	node_stack_AileronC = 0.0, -3.34, 0.58, 0.0, -1.0, 0.0, 0
+	node_stack_rudderL = -2.86, -2.78, -0.055, 0.0, -1.0, 0.0, 0
+	node_stack_rudderR = 2.82, -2.78, -0.055, 0.0, -1.0, 0.0, 0
+	node_attach = 0.0, 0.0, 0.72225, 0.0, 0.0, -1.0	
+	node_stack_heatshield = 0.0, 0.0, 0.73, 0.0, 0.0, -1.0, 1		
 	node_stack_bottom = 0.232, 3.159, -0.043, 0.0, 0.0, -1.0, 0	
 	node_stack_bottom2 = -0.232, 3.159, -0.043, 0.0, 0.0, -1.0, 0
-	//node_stack_top = 0.232, 3.159, -0.25, 0.0, 0.0, 1.0, 0	
-	//node_stack_top2 = -0.232, 3.159, -0.25, 0.0, 0.0, 1.0, 0
 	
 	TechRequired = highAltitudeFlight
-	entryCost = 74000
-	cost = 18500
+	entryCost = 54000
+	cost = 14500
 	category = Pods
 	subcategory = 0
 	title = Hermes Space Shuttle
 	manufacturer = Knes
 	description = Hermes was a reusable launch system that would have been used to transport three astronauts and moderate-size cargo payloads into low Kerbin orbit (LKO) and back again. In basic concept and operation, the Hermes bears a resemblance to other reusable space vehicles, such as the American Space Shuttle. However, unlike the Space Shuttle, Hermes had no ambition to carry heavy cargoes as this role was to be performed by the unmanned and automated Ariane 5 launcher instead.
-	attachRules = 1,0,1,1,0
+	attachRules = 1,1,1,1,0
 	bulkheadProfiles = size1
 	mass = 13
 	dragModelType = default
