--- a/GameData/Knes/Parts/Spacecraft/_Knes_MonoProp_Engine_srf.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_MonoProp_Engine_srf.cfg
@@ -52,24 +52,24 @@ PART
 				channel = Ship
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 1.0 0.5
-				pitch = 0.0 0.5
-				pitch = 1.0 1.0
+				volume = 1.0 0.3
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
 				loop = true
 			}
-
 			MODEL_MULTI_PARTICLE
 			{
-				modelName = Knes/Resources/Plumes/H3/FX_H3_Engine
-				transformName = FXTransform
+				modelName = Squad/FX/Monoprop_small
+				transformName = thrustTransform
 				emission = 0.0 0.0
-				emission = 0.2 0.2
-				emission = 1.0 0.4
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localPosition = 0, 0, 0.12
-			}			
-		}	
+				emission = 0.4 0.005
+				emission = 1.0 0.1
+				speed = 0.0 0.4
+				speed = 1.0 0.6
+				//localOffset = 0, 0, 1
+				localPosition = 0, 0, 0
+			}
+		}
 		engage
 		{
 			AUDIO
@@ -86,7 +86,7 @@ PART
 			PREFAB_PARTICLE
 			{
 				prefabName = fx_exhaustSparks_flameout_2
-				transformName = FXTransform
+				transformName = thrustTransform
 				oneShot = true
 			}
 			AUDIO
