--- a/GameData/Knes/Parts/Spacecraft/_Knes_Utility_Adapter_09375_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Utility_Adapter_09375_0625.cfg
@@ -94,7 +94,7 @@ PART
     }
 	
 	EFFECTS
-	{	
+	{
 		running
 		{
 			AUDIO
@@ -109,19 +109,46 @@ PART
 			}
 			MODEL_MULTI_PARTICLE
 			{
-				modelName = Knes/Resources/Plumes/H3/FX_H3_Engine
-				transformName = Thrust
-				//transformName = PlumeTransform
+				modelName = Squad/FX/Monoprop_small
+				transformName = thrustTransform
 				emission = 0.0 0.0
-				emission = 0.2 0.2
-				emission = 1.0 0.4
-				speed = 0.0 0.8
-				speed = 1.0 1.0
+				emission = 0.4 0.005
+				emission = 1.0 0.1
+				speed = 0.0 0.4
+				speed = 1.0 0.6
 				//localOffset = 0, 0, 1
-			}		
-		}			
+				localPosition = 0, 0, 0
+			}
+		}
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+		flameout
+		{
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_exhaustSparks_flameout_2
+				transformName = thrustTransform
+				oneShot = true
+			}
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_explosion_low
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}	
 	}	
-	
 	
     MODULE
     {
