--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_Adapter.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_Adapter.cfg
@@ -34,7 +34,7 @@
 	crashTolerance = 12
 	breakingForce = 200
 	breakingTorque = 200
-	maxTemp = 2200 // = 2900
+	maxTemp = 3000
 	bulkheadProfiles = size1, size1p5
 	tags = Knes Adapter Hermes
 	stagingIcon = DECOUPLER_VERT
@@ -49,8 +49,8 @@
 	RESOURCE
 	{
 		name = MonoPropellant
-		amount = 0
-		maxAmount = 40
+		amount = 80
+		maxAmount = 80
 	}
 	MODULE
 	{
