--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes.cfg
@@ -12,6 +12,10 @@
 	scale = 1
 	rescaleFactor = 1
 	
+	CoLOffset = 0, 0.3, -0.3	
+	CoPOffset = 0, -0.1, -0.4
+	CoMOffset = 0, 0.2, 0
+	
 	node_stack_engine = 0, -3.47795, -0.16938, 0.0, -1.0, 0.0, 0
 	node_stack_AileronR = -1.7195, -3.01, 0.545, 0.0, -1.0, 0.0, 0
 	node_stack_AileronL = 1.714, -3.01, 0.545, 0.0, -1.0, 0.0, 0
@@ -306,8 +310,8 @@
 	RESOURCE
 	{
 		name = MonoPropellant
-		amount = 100
-		maxAmount = 100
+		amount = 200
+		maxAmount = 200
 	}
 	MODULE
 	{
