--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM4_Engine_125.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_HM4_Engine_125.cfg
@@ -119,16 +119,16 @@ PART
 				loop = true
 			}
 			MODEL_MULTI_PARTICLE
-			{
-				modelName = Knes/Resources/Plumes/H3/FX_H3_Engine
+			{			
+				modelName = Squad/FX/IonPlume
 				transformName = thrustTransform
 				emission = 0.0 0.0
-				emission = 0.4 0.8
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localScale = 0.7, 0.7, 0.7
-			}
+				emission = 0.1 0.1
+				emission = 1.0 0.2
+				speed = 0.0 0.4
+				speed = 1.0 0.6
+				localPosition = 0, 0, 0.03					
+			}	
 		}
 		engage
 		{
