Hermes IVA update

--- a/GameData/Knes/Spaces/Hermes_IVA/Hermes_IVA.cfg
+++ b/GameData/Knes/Spaces/Hermes_IVA/Hermes_IVA.cfg
@@ -7,7 +7,7 @@ INTERNAL
 	}
 	MODEL
 	{
-		model = Knes/Spaces/Hermes_IVA/Hermes_IVA_Mask
+		model = Knes/Spaces/Hermes_IVA/Hermes_IVA_overlay_mask
 	}
 	MODULE
 	{
@@ -25,6 +25,30 @@ INTERNAL
 	{
 		name = InternalSeat
 		seatTransformName = KerbalSeat3
+		allowCrewHelmet = false
+	}
+	MODULE
+	{
+		name = InternalSeat
+		seatTransformName = KerbalSeat4
+		allowCrewHelmet = false
+	}
+	MODULE
+	{
+		name = InternalSeat
+		seatTransformName = KerbalSeat5
+		allowCrewHelmet = false
+	}
+	MODULE
+	{
+		name = InternalSeat
+		seatTransformName = KerbalSeat6
+		allowCrewHelmet = false
+	}
+	MODULE
+	{
+		name = InternalSeat
+		seatTransformName = KerbalSeat7
 		allowCrewHelmet = false
 	}
 	PROP
@@ -47,272 +71,6 @@ INTERNAL
 		position = 0.3,-0.25,-0.777
 		rotation = 0,1,0,0
 		scale = 1,1,1
-	}
-	PROP
-	{
-		name = NF_HTCH_IVA_2Sided
-		position = 0.5519,0.1607,-0.8671
-		rotation = 0,0,-0.7695858,-0.6385435
-		scale = 0.7562275,0.7562271,0.7562252
-	}
-	PROP
-	{
-		name = NF_HTCH_IVA_2Sided_Ring
-		position = 0.563,0.173,-1.128
-		rotation = 0,0,-0.7660359,-0.6427979
-		scale = 0.7121595,0.7121596,0.7121582
-	}
-	PROP
-	{
-		name = NF_RACK_Box_2
-		position = -0.433,0.181,-0.491
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 1,1,0.9394054
-	}
-	PROP
-	{
-		name = NF_RACK_FoodPrep
-		position = -0.411,0.179,-0.066
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 1,1,0.9394054
-	}
-	PROP
-	{
-		name = NF_RACK_ScienceGadget_1
-		position = -0.4,0.178,0.367
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 1,1,0.8930864
-	}
-	PROP
-	{
-		name = NF_HAB_SleepingBag_Compact
-		position = -0.442,0.09,2.032
-		rotation = 0.1879535,0.1879533,0.6816697,0.6816697
-		scale = 0.694262,0.7324887,0.7324887
-	}
-	PROP
-	{
-		name = NF_HAB_SleepingBag_Compact
-		position = 0.443,0.09,2.02
-		rotation = 0.6809062,0.6809062,0.1907006,0.1907007
-		scale = 0.694262,0.7324885,0.7324885
-	}
-	PROP
-	{
-		name = NF_RACK_Freezer
-		position = 0.441,0.176,0.363
-		rotation = 0,-0.7071068,0,0.7071068
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = NF_RACK_Network
-		position = 0.413,0.176,0.78
-		rotation = 0,-0.7071068,0,0.7071068
-		scale = 1,1,0.7859702
-	}
-	PROP
-	{
-		name = NF_RACK_Box_1
-		position = -0.363,0.447,-0.491
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 1.000001,1,0.4640517
-	}
-	PROP
-	{
-		name = NF_RACK_Box_1
-		position = -0.363,0.447,-0.064
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 1.000001,1,0.4640521
-	}
-	PROP
-	{
-		name = NF_RACK_Box_1
-		position = -0.363,0.447,0.82
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 1.000002,1,0.4640524
-	}
-	PROP
-	{
-		name = NF_RACK_Box_1
-		position = 0.36,0.447,0.371
-		rotation = 0,-0.7071068,0,0.7071068
-		scale = 1.000002,1,0.4640524
-	}
-	PROP
-	{
-		name = NF_RACK_Box_1
-		position = 0.36,0.447,0.798
-		rotation = 0,-0.7071068,0,0.7071068
-		scale = 1.000003,1,0.4640528
-	}
-	PROP
-	{
-		name = NF_RACK_Box_1
-		position = 0.36,0.447,-0.064
-		rotation = 0,-0.7071068,0,0.7071068
-		scale = 1.000002,1,0.4640524
-	}
-	PROP
-	{
-		name = NF_RACK_ScienceGadget_1
-		position = 0.426,0.178,-0.064
-		rotation = 0,-0.7071068,0,0.7071068
-		scale = 1.000001,1,1.000001
-	}
-	PROP
-	{
-		name = NF_RACK_Box_1
-		position = -0.433,-0.093,0.37
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 1.000001,1,0.9394062
-	}
-	PROP
-	{
-		name = NF_RACK_Box_3
-		position = -0.435,-0.094,-0.061
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 1,1,0.9394054
-	}
-	PROP
-	{
-		name = NF_RACK_Box_1
-		position = -0.433,-0.093,-0.491
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 1,1,0.9394054
-	}
-	PROP
-	{
-		name = NF_RACK_Box_1
-		position = -0.433,-0.093,0.82
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 1.000001,1,0.9394069
-	}
-	PROP
-	{
-		name = NF_RACK_Tape
-		position = -0.361,0.448,0.371
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 1.000001,1,0.5137467
-	}
-	PROP
-	{
-		name = NF_RACK_Box_1
-		position = 0.437,-0.093,0.79
-		rotation = 0,-0.7071068,0,0.7071068
-		scale = 1.000001,1,0.9394069
-	}
-	PROP
-	{
-		name = NF_RACK_Box_3
-		position = 0.435,-0.094,0.359
-		rotation = 0,-0.7071068,0,0.7071068
-		scale = 1.000001,1,0.9394062
-	}
-	PROP
-	{
-		name = NF_RACK_Server
-		position = -0.4293003,0.174,0.8110003
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = NF_RACK_Box_1
-		position = 0.437,-0.093,-0.071
-		rotation = 0,-0.7071068,0,0.7071068
-		scale = 1.000001,1,0.9394062
-	}
-	PROP
-	{
-		name = NF_RACK_BlinkingLights
-		position = -0.4293,0.172,0.811
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = NF_RACK_Server
-		position = -0.4293,0.013,0.811
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = NF_HAB_Extinguisher
-		position = 0.401,-0.007,-0.474
-		rotation = -0.5,0.5,-0.5,0.5
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = NF_LGHT_Box_Small
-		position = 0,-0.209,2.1015
-		rotation = -0.7071068,0,0,0.7071068
-		scale = 1,0.7680907,1
-	}
-	PROP
-	{
-		name = NF_HTCH_IVA_2Sided_Ring
-		position = 0.0001245732,0.1369218,2.100428
-		rotation = -0.7071068,0,0,0.7071068
-		scale = 0.7124574,0.7124633,0.7124633
-	}
-	PROP
-	{
-		name = NF_HTCH_IVA_2Sided
-		position = -0.001442833,0.3911508,2.086179
-		rotation = -0.7071068,0,0,0.7071068
-		scale = 0.7497621,0.7497678,0.7497678
-	}
-	PROP
-	{
-		name = NF_LGHT_Tube
-		position = -0.2932,0.6254,0.375
-		rotation = 0.5,0.5,-0.5,0.5
-		scale = 0.9066492,0.9458578,0.9458578
-	}
-	PROP
-	{
-		name = NF_LGHT_Tube
-		position = -0.2932,0.6254,0.828
-		rotation = 0.5,0.5,-0.5,0.5
-		scale = 0.9066492,0.9458578,0.9458578
-	}
-	PROP
-	{
-		name = NF_LGHT_Tube
-		position = -0.2932,0.6254,-0.062
-		rotation = 0.5,0.5,-0.5,0.5
-		scale = 0.9066492,0.9458578,0.9458578
-	}
-	PROP
-	{
-		name = NF_LGHT_Tube
-		position = -0.2932,0.6254,-0.494
-		rotation = 0.5,0.5,-0.5,0.5
-		scale = 0.9066492,0.9458578,0.9458578
-	}
-	PROP
-	{
-		name = NF_LGHT_Tube
-		position = 0.295,0.6254,-0.062
-		rotation = 0.5,-0.5,0.5,0.5
-		scale = 0.9066492,0.9458578,0.9458578
-	}
-	PROP
-	{
-		name = NF_LGHT_Tube
-		position = 0.295,0.6254,0.828
-		rotation = 0.5,-0.5,0.5,0.5
-		scale = 0.9066492,0.9458578,0.9458578
-	}
-	PROP
-	{
-		name = NF_LGHT_Tube
-		position = 0.295,0.6254,0.375
-		rotation = 0.5,-0.5,0.5,0.5
-		scale = 0.9066492,0.9458578,0.9458578
 	}
 	PROP
 	{
@@ -429,14 +187,14 @@ INTERNAL
 	PROP
 	{
 		name = AxisIndicatorRoll
-		position = 0.181,0.143,-2.2
+		position = 0.2707,0.143,-2.2
 		rotation = 0.4596847,-0.5372972,-0.4596884,0.5372972
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = AxisIndicatorYaw
-		position = 0.181,0.174,-2.204
+		position = 0.2707,0.174,-2.204
 		rotation = 0.4596847,-0.5372972,-0.4596884,0.5372972
 		scale = 1,1,1
 	}
@@ -450,28 +208,28 @@ INTERNAL
 	PROP
 	{
 		name = AxisIndicatorYaw
-		position = -0.1809,0.174,-2.204
+		position = -0.272,0.174,-2.204
 		rotation = 0.4596847,-0.5372972,-0.4596884,0.5372972
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = AxisIndicatorRoll
-		position = -0.1809,0.143,-2.2
+		position = -0.272,0.143,-2.2
 		rotation = 0.4596847,-0.5372972,-0.4596884,0.5372972
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = NavBall
-		position = 0.3011,0.1613,-2.1916
+		position = 0.3377,0.1613,-2.1916
 		rotation = 0.6643536,-3.080114E-07,-2.648802E-06,0.7474184
 		scale = 0.9132701,0.91327,0.91327
 	}
 	PROP
 	{
 		name = NavBall
-		position = -0.2981,0.1613,-2.1916
+		position = -0.3376,0.1613,-2.1916
 		rotation = 0.6643536,-3.080114E-07,-2.648802E-06,0.7474184
 		scale = 0.9132701,0.91327,0.91327
 	}
@@ -491,45 +249,10 @@ INTERNAL
 	}
 	PROP
 	{
-		name = NF_HAB_Radio
-		position = 0.249,0.066,-2.1715
-		rotation = 0.5,-0.5,-0.5,0.5
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = NF_HAB_Radio
-		position = -0.171,0.066,-2.1715
-		rotation = 0.5,-0.5,-0.5,0.5
-		scale = 1,1,1
-	}
-	PROP
-	{
 		name = genericClusterSwitches02
 		position = -0.5858,0.1157,-2.1063
 		rotation = -0.2084485,-0.6750179,-0.2107131,0.6756479
 		scale = 0.93,0.9300002,0.9299998
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_MFD_Small
-		position = 0.6102,0.2242,-1.9699
-		rotation = -0.5257257,0.4728768,0.5257257,0.4728768
-		scale = 0.89,0.8900002,0.8900002
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_MFD_Tiny
-		position = 0.3013,0.2512962,-2.2047
-		rotation = 0.4685431,0.5295917,0.4685431,0.5295917
-		scale = 1.374029,1.374029,1.374029
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_MFD_FuelElec
-		position = -0.0018,0.1622,-2.1968
-		rotation = 0.6561297,0,0,0.7546482
-		scale = 0.5941746,0.5941749,0.5941749
 	}
 	PROP
 	{
@@ -543,13 +266,6 @@ INTERNAL
 		name = genericClusterSwitches04
 		position = -0.6004,0.1247,-1.9485
 		rotation = 0.2155466,0.6734536,-0.2155467,0.6734536
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = genericClusterSwitches07
-		position = -0.1148,0.1606,-2.1984
-		rotation = 0.4586412,0.5381898,0.4586412,0.5381897
 		scale = 1,1,1
 	}
 	PROP
@@ -568,23 +284,275 @@ INTERNAL
 	}
 	PROP
 	{
+		name = Knes_Monitor
+		position = 0.2999,0.2511,-2.2063
+		rotation = 0,0.9973562,-0.07266741,0
+		scale = 0.7734973,0.7734973,0.7734973
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = -0.2999,0.2511,-2.2063
+		rotation = 0,0.9973562,-0.07266741,0
+		scale = 0.7735,0.7735,0.7735
+	}
+	PROP
+	{
+		name = Knes_Monitor_SideMount
+		position = -0.4345,0.1928,1.6727
+		rotation = 0,-0.7071068,0,0.7071068
+		scale = 1.260074,1.260074,1.260074
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = -0.4399,0.2167,1.5298
+		rotation = 0,-0.7071068,0,0.7071068
+		scale = 0.8934315,0.8934314,0.8934314
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = -0.4399,0.0993,1.5298
+		rotation = 0,-0.7071068,0,0.7071068
+		scale = 0.8934319,0.8934314,0.8934318
+	}
+	PROP
+	{
+		name = Knes_Monitor_SideMount
+		position = 0.44,0.1976,1.6744
+		rotation = 0,0.7071068,0,0.7071068
+		scale = 1.26007,1.26007,1.26007
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = 0.4346,0.1041,1.5315
+		rotation = 0,0.7071068,0,0.7071068
+		scale = 0.8934305,0.89343,0.8934305
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = 0.4346,0.2215,1.5315
+		rotation = 0,0.7071068,0,0.7071068
+		scale = 0.8934305,0.89343,0.8934305
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = -0.6062,0.2201,-2.1148
+		rotation = -0.008697021,-0.6970327,-0.007867134,0.7169434
+		scale = 0.9993904,0.9993906,0.9993906
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = -0.6064,0.2192,-1.982
+		rotation = -0.008697021,-0.6970327,-0.007867134,0.7169434
+		scale = 0.9993894,0.9993889,0.9993894
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = 0.61,0.2195,-1.9818
+		rotation = 0.03603782,-0.686174,-0.0316039,-0.7258566
+		scale = 0.9993902,0.9993899,0.9993899
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = 0.403,-0.062,-0.401
+		rotation = -0.5,-0.5,0.5,0.5
+		scale = 0.7571069,0.6971077,0.7571069
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = 0.6125,0.2196,-2.1149
+		rotation = 0.03553341,-0.7140934,-0.03563927,-0.6982391
+		scale = 0.9993902,0.9993899,0.9993899
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.3165,-0.1136,-0.623
+		rotation = 0,0,-0.7071068,0.7071068
+		scale = 0.6247279,0.6247279,0.6247279
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.316,0.211,-0.623
+		rotation = 0,0,-0.7071068,0.7071068
+		scale = 0.6247302,0.6247302,0.62473
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.316,0.524,-0.623
+		rotation = 0,0,-0.7071068,0.7071068
+		scale = 0.6247302,0.6247302,0.62473
+	}
+	PROP
+	{
+		name = Knes_Seat_Passenger
+		position = -0.31,-0.3,1.94
+		rotation = 0,0.7071068,0,0.7071068
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = 0.406,0.275,-0.397
+		rotation = -0.5,-0.5,0.5,0.5
+		scale = 0.5282339,0.5282339,0.5282339
+	}
+	PROP
+	{
+		name = Knes_Seat_Passenger
+		position = 0.31,-0.3,1.94
+		rotation = 0,-0.7071068,0,0.7071068
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Seat_Passenger
+		position = -0.31,-0.3,1.31
+		rotation = 0,0.7071068,0,0.7071068
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Seat_Passenger
+		position = 0.31,-0.3,1.31
+		rotation = 0,-0.7071068,0,0.7071068
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_ScienceRackBio_flat
+		position = 0.387,0.227,-0.145
+		rotation = 0,0,0.7071068,0.7071068
+		scale = 0.5285363,0.4517486,0.4517486
+	}
+	PROP
+	{
+		name = Knes_ScienceRackExp2_flat
+		position = 0.387,0.227,0.355
+		rotation = -0.7071068,0.7071068,0,0
+		scale = 0.5285363,0.4517486,0.4517486
+	}
+	PROP
+	{
+		name = Knes_ScienceRackExp_flat
+		position = 0.387,0.227,0.855
+		rotation = 0,0,0.7071068,0.7071068
+		scale = 0.5285363,0.4517486,0.4517486
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.6514,0.005600002,-1.539
+		rotation = 0,0,-0.7071068,0.7071068
+		scale = 0.486467,0.4388081,0.5020633
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.6514,0.0056,-1.751
+		rotation = 0,0,-0.7071068,0.7071068
+		scale = 0.486467,0.4388081,0.5020633
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.5721,-0.2307,-1.751
+		rotation = 0,0,-0.3996871,0.9166517
+		scale = 0.3704405,0.3912085,0.4639204
+	}
+	PROP
+	{
+		name = Hatch_Plane_Curve90
+		position = 0.619,0.156,-1.157
+		rotation = -0.5270095,0.4714455,0.5270095,0.4714455
+		scale = 0.8924,0.3661305,0.8924
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.5721,-0.2307,-1.5355
+		rotation = 0,0,-0.3996871,0.9166517
+		scale = 0.37044,0.39121,0.46392
+	}
+	PROP
+	{
+		name = Knes_ScienceRackExp2_flat
+		position = -0.387,0.227,0.355
+		rotation = 0,0,-0.7071068,0.7071068
+		scale = 0.5285403,0.4517502,0.45175
+	}
+	PROP
+	{
+		name = Knes_ScienceRackExp_flat
+		position = -0.387,0.227,0.855
+		rotation = 0.7071068,0.7071068,0,0
+		scale = 0.5285403,0.4517502,0.45175
+	}
+	PROP
+	{
+		name = Knes_ScienceRackExp2_flat
+		position = -0.387,0.227,-0.145
+		rotation = 0,0,-0.7071068,0.7071068
+		scale = 0.5285403,0.4517502,0.45175
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.45,-0.0772,1.687
+		rotation = 0.7071068,0.7071068,0,0
+		scale = 0.3533439,0.2900226,0.353344
+	}
+	PROP
+	{
+		name = Knes_Monitor_SideMount
+		position = 0.1598,0.2242,-2.1885
+		rotation = 0,0.9967195,-0.08093355,0
+		scale = 1,1,1
+	}
+	PROP
+	{
 		name = genericClusterSwitches07
-		position = 0.115,0.1619,-2.1987
-		rotation = 0.4586413,0.5381898,0.4586412,0.5381898
-		scale = 0.9999999,0.9999999,0.9999998
+		position = -0.03,0.161,-2.1984
+		rotation = 0.4586412,0.5381898,0.4586412,0.5381897
+		scale = 0.9999999,0.9999999,1
 	}
 	PROP
 	{
-		name = NF_RPM_CNSL_MFD_Tiny
-		position = -0.299231,0.2512655,-2.204699
-		rotation = 0.4685893,0.5295509,0.4685893,0.5295509
-		scale = 1.374029,1.37403,1.37403
+		name = genericClusterSwitches07
+		position = 0.03,0.161,-2.1984
+		rotation = 0.4586412,0.5381898,0.4586412,0.5381897
+		scale = 0.9999999,0.9999999,1
 	}
 	PROP
 	{
-		name = NF_COMP_Monitor
-		position = -0.5981,0.2213,-2.0052
-		rotation = 0.4956343,0.4987531,-0.514082,0.491235
-		scale = 0.5064991,0.5064991,0.5064991
+		name = Knes_Monitor_SideMount
+		position = -0.1598,0.2242,-2.1885
+		rotation = 0,0.9967195,-0.08093355,0
+		scale = 1,0.9999999,0.9999999
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = 0.581,0.226,-2.227
+		rotation = 0.3950898,0.4313418,0.5794078,0.5675693
+		scale = 0.245162,0.1672895,0.2119658
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.581,0.226,-2.227
+		rotation = 0.58704,0.6159107,0.3462244,0.3951794
+		scale = 0.24516,0.16729,0.21197
 	}
 }
