Add bottom node for Ariane first stage

--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L220N.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L220N.cfg
@@ -17,7 +17,8 @@ PART
     rescaleFactor = 1.0
 
     node_stack_top    = 0.0,  9.42267, 0.0, 0.0, 1.0, 0.0, 2
-	node_attach = 0.0, 0.0, 1.25, 0.0, 0.0, -1.0	
+	node_attach = 0.0, 0.0, 1.25, 0.0, 0.0, -1.0
+	node_stack_bottom02 = 0.0, -7.5, 0.0, 0.0, -1.0, 0.0, 3	
         
     bulkheadProfiles = size2
         
