--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes.cfg
@@ -320,7 +320,7 @@
 		VARIANT
 		{
 			name = MK1
-			displayName = #autoLOC_8007114
+			displayName = MK1
 			primaryColor = #ffffff
 			secondaryColor = #999999
 			//sizeGroup = GroupB
@@ -338,7 +338,7 @@
 		VARIANT
 		{
 			name = MK2
-			displayName =  #autoLOC_8007115
+			displayName =  MK2
 			primaryColor = #d96200
 			secondaryColor = #999999
 			//sizeGroup = GroupA
