--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_Adapter.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_Adapter.cfg
@@ -59,7 +59,7 @@
 		VARIANT
 		{
 			name = Shroud
-			displayName = #autoLOC_8007114
+			displayName = 1.25
 			primaryColor = #ffffff
 			secondaryColor = #999999
 			sizeGroup = GroupB
@@ -75,7 +75,7 @@
 		VARIANT
 		{
 			name = Bare
-			displayName =  #autoLOC_8007115
+			displayName =  1.875
 			primaryColor = #d96200
 			secondaryColor = #999999
 			sizeGroup = GroupA
