New internal camera switch for Hermes + Fix of the windows mesh

--- a/GameData/Knes/Spaces/Hermes_IVA/Hermes_IVA.cfg
+++ b/GameData/Knes/Spaces/Hermes_IVA/Hermes_IVA.cfg
@@ -11,6 +11,30 @@ INTERNAL
 	}
 	MODULE
 	{
+		name = InternalCameraSwitch
+		colliderTransformName = Windows1_Collider
+		cameraTransformName = Windows1
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Windows2_Collider
+		cameraTransformName = Windows2
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Camera_rear_collider
+		cameraTransformName = Camera_rear
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Rear_collider
+		cameraTransformName = rear
+	}		
+	MODULE
+	{
 		name = InternalSeat
 		seatTransformName = KerbalSeat1
 		allowCrewHelmet = false
