RCS 3 Way "Zorg"

--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_RCS_3way.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_RCS_3way.cfg
@@ -4,46 +4,44 @@
 
 PART
 {
-	name = _Knes_RCS_Bump_roll
+	name = _Knes_RCS_3way
 	module = Part
 	author = Well
 	
 	MODEL
 	{
-		model = Knes/Parts/Launcher/Diamant/RCS_Bump_roll
+		model = Knes/Parts/Launcher/L3S/RCS_3way
 	}	
 	
 	scale = 1
 	rescaleFactor = 1
 	
-	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0
+	node_attach = 0.0, 0.0, 0.044, 0.0, 0.0, -1.0
+	attachRules = 0,1,0,0,0
 	
-	bulkheadProfiles = srf	
-	attachRules = 0,1,0,1,0
-	
-	TechRequired = stability
-	entryCost = 200
-	cost = 20
+    TechRequired = generalRocketry
+	entryCost = 1100
+	cost = 75
 	category = Control
 	subcategory = 0
-	title = KEREB-D "Astro" RCS
+	title = Mk-61 "Zorg" RCS Pod
 	manufacturer = Knes
-	description = A small RCS with monoprop included to control the roll of your rocket.
-	tags = Diamant Knes rcs engine Diomede
+	description = A small RCS pod 3 way with monoprop
 	
-	mass = 0.008
+	tags = Diamant Knes booster srf Diomede L3S Ariane RCS
 	
-	thermalMassModifier = 8.0
-	// heatConductivity = 0.06 // half default
-	emissiveConstant = 0.95
-	dragModelType = none
-	maximum_drag = 0.02
-	minimum_drag = 0.02
+	mass = 0.02
+	heatConductivity = 0.04 // 1/3 default
+	skinInternalConductionMult = 4.0
+	emissiveConstant = 0.5 // yes, it's white. But let's claim it's an emissive white...	
+	dragModelType = default
+	maximum_drag = 0.3
+	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 8
-	maxTemp = 2800
-	explosionPotential = 0.1
-	fuelCrossFeed = True
+	crashTolerance = 7
+	maxTemp = 3000
+	ActivatesEvenIfDisconnected = true
+	bulkheadProfiles = srf
 
 	EFFECTS
 	{
@@ -95,7 +93,7 @@ PART
 	RESOURCE
 	{
 		name = MonoPropellant
-		amount = 4
-		maxAmount = 4
+		amount = 10
+		maxAmount = 10
 	}	
 }
