--- a/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Catherine_Stage_1875.cfg
+++ b/GameData/Knes/Parts/Launcher/Vulcain/_Knes_Catherine_Stage_1875.cfg
@@ -62,7 +62,7 @@ PART
         ignitionThreshold = 0.1
         minThrust = 0
         maxThrust = 450
-        heatProduction = 200
+        heatProduction = 300
         PROPELLANT
         {
         name = LiquidFuel
@@ -122,7 +122,7 @@ PART
 		name = ModuleJettison
 		jettisonName = Fairing
 		bottomNodeName = bottom
-		isFairing = True
+		isFairing = False
 		jettisonedObjectMass = 0.1
 		jettisonForce = 5
 		jettisonDirection = 0 0 1
@@ -381,5 +381,5 @@ PART
             key = 0 0
             key = 1 1
         }
-    }	
+    }
 }
