Balance StarRider RCS

--- a/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
@@ -188,7 +188,7 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Squad/FX/Monoprop_small
-				transformName = RCS
+				transformName = RCSfx
 				emission = 0.0 0.0
 				emission = 0.1 0.0
 				emission = 1.0 1.0
