StarWatcher IVA Fix

--- a/GameData/Knes/Spaces/Pod_StarWatcher_IVA/Knes_Pod_StarWatcher_IVA.cfg
+++ b/GameData/Knes/Spaces/Pod_StarWatcher_IVA/Knes_Pod_StarWatcher_IVA.cfg
@@ -1,16 +1,14 @@
 INTERNAL
 {
 	name = Knes_Pod_StarWatcher_IVA
-	
 	MODEL
 	{
 		model = Knes/Spaces/Pod_StarWatcher_IVA/Knes_Pod_StarWatcher_IVA
-	}	
+	}
 	MODEL
 	{
 		model = Knes/Spaces/Pod_StarWatcher_IVA/Pod_StarWatcher_IVA_DepthMask
-	}	
-	
+	}
 	MODULE
 	{
 		name = InternalSeat
@@ -52,7 +50,7 @@ INTERNAL
 		name = InternalCameraSwitch
 		colliderTransformName = CameraCabinCollider
 		cameraTransformName = CameraCabin
-	}	
+	}
 	MODULE
 	{
 		name = InternalCameraSwitch
@@ -64,7 +62,7 @@ INTERNAL
 		name = InternalCameraSwitch
 		colliderTransformName = Monitor2_Collider
 		cameraTransformName = Monitor2
-	}		
+	}
 	PROP
 	{
 		name = Hatch_Plane
@@ -75,28 +73,28 @@ INTERNAL
 	PROP
 	{
 		name = Seat_Pilot
-		position = 0.25,-0.545,-0.96
+		position = 0.25,-0.546,-0.931
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Seat_Pilot
-		position = -0.25,-0.545,-0.96
+		position = -0.25,-0.546,-0.931
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Knes_Monitor_SideMount
-		position = -0.2459,-0.015,-0.7025
+		position = -0.2459,-0.013,-0.695
 		rotation = 0,1,0,0
 		scale = 1.1667,1.1667,1.1667
 	}
 	PROP
 	{
 		name = Knes_Monitor_SideMount
-		position = 0.2459,-0.015,-0.7025
+		position = 0.2459,-0.013,-0.695
 		rotation = 0,1,0,0
 		scale = 1.1667,1.1667,1.1667
 	}
@@ -117,14 +115,14 @@ INTERNAL
 	PROP
 	{
 		name = Seat_Passenger
-		position = 0.3,-0.55,-0.15
+		position = 0.3,-0.55,-0.139
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Seat_Passenger
-		position = -0.3,-0.55,-0.15
+		position = -0.3,-0.55,-0.139
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
@@ -159,14 +157,14 @@ INTERNAL
 	PROP
 	{
 		name = Seat_Passenger
-		position = 0.35,-0.55,0.67
+		position = 0.35,-0.55,0.681
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Seat_Passenger
-		position = -0.35,-0.55,0.67
+		position = -0.35,-0.55,0.681
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
@@ -307,7 +305,7 @@ INTERNAL
 	{
 		name = AtmosphereDepth
 		position = 0.0739,-0.1807,-1.4677
-		rotation = 0.5000001,0.5000001,0.5,0.5
+		rotation = 0.5000001,0.5000001,0.4999999,0.4999999
 		scale = 0.7,0.7,0.7
 	}
 	PROP
@@ -398,7 +396,7 @@ INTERNAL
 	{
 		name = AtmosphereDepth
 		position = -0.1422,-0.1807,-1.4677
-		rotation = 0.5000001,0.5000001,0.5,0.5
+		rotation = 0.5000001,0.5000001,0.4999999,0.4999999
 		scale = 0.7000002,0.7000002,0.7000002
 	}
 	PROP
