--- a/GameData/Knes/Parts/Core/Antenna/_Knes_DirectAntenna_bread.cfg
+++ b/GameData/Knes/Parts/Core/Antenna/_Knes_DirectAntenna_bread.cfg
@@ -19,7 +19,7 @@ PART
 	node_attach = 0.0, 0.0, 0.021, 0.0, 0.0, -1.0
 	attachRules = 0,1,0,0,0
 	
-    TechRequired = engineering101
+    TechRequired = flightControl
 	entryCost = 1200
 	cost = 125
 	category = Communication
