--- a/GameData/Knes/Parts/Core/Sat/_Knes_Flat_SolarPanel_NanoSat.cfg
+++ b/GameData/Knes/Parts/Core/Sat/_Knes_Flat_SolarPanel_NanoSat.cfg
@@ -19,7 +19,7 @@ PART
 	scale = 1
 	rescaleFactor = 1
 
-	TechRequired = electrics
+	TechRequired = basicScience
 	entryCost = 800
 	cost = 25
 	category = Electrical
