--- a/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
@@ -29,7 +29,7 @@ PART
 	breakingTorque = 100
 
 // --- editor parameters ---
-	TechRequired = aerodynamicSystems
+	TechRequired = aviation
 	entryCost = 11000
 	cost = 4000
 	category = Pods
