--- a/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_IXV_Elevon.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_IXV_Elevon.cfg
@@ -11,7 +11,7 @@ PART
 	rescaleFactor = 1
 	node_stack_SOAR = 0, -0.02, 0, 0.0, 1.0, 0.0, 0
 	node_attach = 0, -0.02, 0, 0.0, 1.0, 0.0, 0
-	TechRequired = advAerodynamics
+	TechRequired = aviation
 	entryCost = 3200
 	cost = 100
 	category = Aero
