--- a/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_375.cfg
@@ -34,7 +34,7 @@ PART
 	manufacturer = Knes
 	description = While the Kerbals at Mission Control were still figuring out how to get their rockets back down to Kerbin safely, the research engineers at FLOOYD were quickly realising that protecting parts on ascent was just as important. Heavy research into two-dimensional-input driven procedural construction was then funded with the hopes of making protective shells for important payloads and interstage areas of the crafts. The protective shells also have the benefit of making the craft more aerodynamic, hopefully saving on precious rocket fuel! The AE-FF3 is the largest size available from FLOOYD.
 	attachRules = 1,0,1,1,0
-	mass = 0.015 //0.475
+	mass = 0.2
 	thermalMassModifier = 2.0
 	skinMassPerArea = 4.0
 	skinInternalConductionMult = 0.25
