--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Pod_Rescue.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Pod_Rescue.cfg
@@ -277,7 +277,7 @@ PART
 			eventOffName = #autoLOC_MRK_100b //#autoLOC_MRK_100b = Cabin Lights Off
 			toggleAction = True
 			defaultActionGroup = Light
-			excludedRenderer = mrcDM_Indicator
+			//excludedRenderer = mrcDM_Indicator
 			redCurve
 			{
 				key = 0 0 0 3
