MRK LES and other fix

--- a/GameData/Knes/Localization/MRK_en-us.cfg
+++ b/GameData/Knes/Localization/MRK_en-us.cfg
@@ -64,5 +64,12 @@ Localization
 				// --- Service Module Thruster ---
 				#autoLOC_MRK_181 = MRK-6f Thruster
 				#autoLOC_MRK_182 = A pair of these minute thrusters are tucked away inside the MRK Service Module to allow for precision docking manouvres under the MRK crew's control. Ideal for situations where there are unresponsive station teams.
+				
+				// --- LES ---
+				
+				#autoLOC_MRK_191 = MRK Launch Escape System
+				#autoLOC_MRK_192 = This solid rocket tower is designed to wrench the command pod up and away from a malfunctioning rocket.
+		 				
+				
 		 }
 }
