--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_LES.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_LES.cfg
@@ -12,7 +12,7 @@
 	scale = 1
 	rescaleFactor = 1.0
 	
-	node_stack_bottom = 0.0, -1.50658, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_bottom = 0.0, -1.50658, 0.0, 0.0, -1.0, 0.0, 0
 	
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
@@ -22,9 +22,9 @@
 	cost = 1000
 	category = Utility
 	subcategory = 0
-	title = MRK LES
+	title = #autoLOC_MRK_191
 	manufacturer = Knes
-	description = This solid rocket tower is designed to wrench the command pod up and away from a malfunctioning rocket.
+	description = #autoLOC_MRK_192
 	attachRules = 1,1,1,1,0
 	mass = 0.9
 	// heatConductivity = 0.04 // 1/3 default
@@ -51,7 +51,7 @@
 		throttleLocked = True
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust = 580
+		maxThrust = 850
 		heatProduction = 500
 		fxOffset = 0, 0, 0.25
 		EngineType = SolidBooster
@@ -80,6 +80,7 @@
 		ejectionForce = 10
 		explosiveNodeID = bottom
 	}
+	
 	
 	EFFECTS
 	{
@@ -130,4 +131,39 @@
 			}
 		}
 	}
+	MODULE
+	{
+		name = ModulePartVariants
+		baseVariant = Bare
+		VARIANT
+		{
+			name = MRK
+			displayName = MRK
+			primaryColor = #ffffff
+			secondaryColor = #990000
+			sizeGroup = GroupB
+			cost = 250
+			mass = 0.2
+			GAMEOBJECTS
+			{
+				Fairing = true
+			}
+			NODES
+			{
+				node_stack_bottom = 0.0, -2.117, 0.0, 0.0, -1.0, 0.0, 0
+			}				
+		}	
+		VARIANT
+		{
+			name = Bare
+			displayName =  #autoLOC_8007115
+			primaryColor = #ffffff
+			secondaryColor = #ffffff
+			sizeGroup = GroupA
+			GAMEOBJECTS
+			{
+				Fairing = false
+			}		
+		}		
+	}		
 }
