--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Parachute.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Parachute.cfg
@@ -54,17 +54,17 @@ PART
 		autoCutSpeed = 0.5
 		capName = mrcChuteCanopy
 		canopyName = mainSheet
-		semiDeployedAnimation = semiDeployMRC
-		fullyDeployedAnimation = fullyDeployMRC
-		stowedDrag = 0.25
+		semiDeployedAnimation = MRK_semiDeploySmall
+		fullyDeployedAnimation = MRK_fullyDeploySmall
+		stowedDrag = 0.22
 		semiDeployedDrag = 1
 		fullyDeployedDrag = 500
-		minAirPressureToOpen = 0.05
+		minAirPressureToOpen = 0.04
 		clampMinAirPressure = 0.04
-		deployAltitude = 1800
-		deploymentSpeed = 0.125
+		deployAltitude = 1500
+		deploymentSpeed = 0.12
 		semiDeploymentSpeed = 0.5
-		chuteMaxTemp = 750
+		chuteMaxTemp = 650
 	}
 	MODULE
 	{
@@ -231,6 +231,6 @@ PART
 	{
 		name = ModuleDragModifier
 		dragCubeName = DEPLOYED
-		dragModifier = 58
+		dragModifier = 55
 	}
 }
